--- a/crudproject/templates/display.html
+++ b/crudproject/templates/display.html
@@ -28,7 +28,7 @@
                     <td>{{emp.esal}}</td>
                     <td>{{emp.email}}</td>
                     <td>
-                        <a href="/update/{{emp.id}}"><button>Update</button></a>
+                        <a href="/edit/{{emp.id}}"><button>Update</button></a>
                         <a href="/delete/{{emp.id}}"><button>Delete</button></a>
                     </td>
                 </tr>
