--- a/crudproj/templates/display.html
+++ b/crudproj/templates/display.html
@@ -29,8 +29,8 @@
                             <td>{{emp.esal}}</td>
                             <td>{{emp.eemail}}</td>
                             <td>
-                                <a href="/edit/{emp.id}"><button>Update</button></a>
-                                <a href="/delete/{emp.id}"><button>Delete</button></a>
+                                <a href="/edit/{{emp.id}}"><button>Update</button></a>
+                                <a href="/delete/{{emp.id}}"><button>Delete</button></a>
                             </td>
                         </tr>
                         {%endfor%}
