--- a/crudproj/templates/update.html
+++ b/crudproj/templates/update.html
@@ -4,8 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" >
 </head>
 <body>
-    <h1>Updating Data</h1>
+    
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-8">
+                <div class="card">
+                    <div class="card-header">
+                        <h1>Updating Data</h1>
+                    </div>
+                    <div class="card-body">
+                        <form action="/update/{{employee.id}}" method="POST">
+
+                            {% csrf_token %}
+                            <div class="form-group">
+                                <label>Employee Id:</label>
+                                <input class="form-control" type="text" name="eid" id="id_eid" value="{{employee.eid}}" />
+                            </div>
+                            <div class="form-group">
+                                <label>Employee Name:</label>
+                                <input class="form-control" type="text" name="ename" id="id_ename" value="{{employee.ename}}" />
+                            </div>
+                            <div class="form-group">
+                                <label>Employee Salary:</label>
+                                <input class="form-control" type="text" name="esal" id="id_esal" value="{{employee.esal}}" />
+                            </div>
+                            <div class="form-group">
+                                <label>Employee Email:</label>
+                                <input class="form-control" type="text" name="eemail" id="id_eemail" value="{{employee.eemail}}" />
+                            </div>
+                            <input type="submit" value="update" class="btn btn-warning"/>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
 </body>
 </html>
